fix: make sure grid doesn't overflow

--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -6,13 +6,13 @@
 
 #container, #container2 {
   width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #container {
+  height: 100vh;
   background-image: url('../images/bg_sdvx.png'), url('../images/body-bg1.png'), url('../images/bg_main02.png');
   background-repeat: no-repeat, repeat, repeat;
   background-position: center, top left, top left;
@@ -27,6 +27,7 @@
 }
 
 #container2 {
+  padding: 5em 0;
   background-color: rgb(56, 56, 56);
 }
 
